Sprites changed and wing movements added

--- a/popup.html
+++ b/popup.html
@@ -4,16 +4,16 @@
         <style>
             @font-face {
                 font-family: 'FlappyBirdy';
-                src: url('/FlappyBirdy.ttf');
+                src: url('/fonts/FlappyBirdy.ttf');
             }
             @font-face {
                 font-family: 'DisposableDroidBB';
-                src: url('/DisposableDroidBB.ttf');
+                src: url('/fonts/DisposableDroidBB.ttf');
             }
         </style>
     </head>
     <body style="margin: 0; padding: 0">
         <canvas id="game_canvas" style="background-color: darkgrey;"></canvas>
-        <script src="index.js"></script>
+        <script src="popup.js"></script>
     </body>
 </html>
